fixed labels and a contrast issue on the gallery

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #195A66;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
